// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headline should render as h1 element 1`] = `
.circuit-0 {
  font-weight: 700;
  color: #000;
  font-size: 32px;
  line-height: 36px;
}

<h1
  class="circuit-0"
>
  h1 headline
</h1>
`;

exports[`Headline should render as h2 element 1`] = `
.circuit-0 {
  font-weight: 700;
  color: #000;
  font-size: 32px;
  line-height: 36px;
}

<h2
  class="circuit-0"
>
  h2 headline
</h2>
`;

exports[`Headline should render as h3 element 1`] = `
.circuit-0 {
  font-weight: 700;
  color: #000;
  font-size: 32px;
  line-height: 36px;
}

<h3
  class="circuit-0"
>
  h3 headline
</h3>
`;

exports[`Headline should render as h4 element 1`] = `
.circuit-0 {
  font-weight: 700;
  color: #000;
  font-size: 32px;
  line-height: 36px;
}

<h4
  class="circuit-0"
>
  h4 headline
</h4>
`;

exports[`Headline should render as h5 element 1`] = `
.circuit-0 {
  font-weight: 700;
  color: #000;
  font-size: 32px;
  line-height: 36px;
}

<h5
  class="circuit-0"
>
  h5 headline
</h5>
`;

exports[`Headline should render as h6 element 1`] = `
.circuit-0 {
  font-weight: 700;
  color: #000;
  font-size: 32px;
  line-height: 36px;
}

<h6
  class="circuit-0"
>
  h6 headline
</h6>
`;

exports[`Headline should render with size four 1`] = `
.circuit-0 {
  font-weight: 700;
  color: #000;
  font-size: 18px;
  line-height: 24px;
}

<h2
  class="circuit-0"
>
  four headline
</h2>
`;

exports[`Headline should render with size one 1`] = `
.circuit-0 {
  font-weight: 700;
  color: #000;
  font-size: 32px;
  line-height: 36px;
}

<h2
  class="circuit-0"
>
  one headline
</h2>
`;

exports[`Headline should render with size three 1`] = `
.circuit-0 {
  font-weight: 700;
  color: #000;
  font-size: 20px;
  line-height: 24px;
}

<h2
  class="circuit-0"
>
  three headline
</h2>
`;

exports[`Headline should render with size two 1`] = `
.circuit-0 {
  font-weight: 700;
  color: #000;
  font-size: 24px;
  line-height: 28px;
}

<h2
  class="circuit-0"
>
  two headline
</h2>
`;
